# flaskblog

./: .env  .gitignore  Dockerfile  Dockerfile.nginx  Makefile  README  README.md  app.py  config.py  docker-compose.yml  logrotate-nginx.conf  models.py  nginx.conf  pyproject.toml  requirements.txt  robots.txt
Data/: demo_data.sql
Data/grafana/: grafana.db
Data/influxdb/data/_internal/monitor/1/: fields.idx
Data/influxdb/data/_internal/monitor/5/: 000000001-000000001.tsm  fields.idx
Data/influxdb/data/_internal/monitor/7/: fields.idx
Data/influxdb/data/pyexample/autogen/2/: 000000001-000000001.tsm  fields.idx
Data/influxdb/data/pyexample/autogen/3/: 000000001-000000001.tsm  fields.idx
Data/influxdb/data/pyexample/autogen/4/: 000000001-000000001.tsm  000000002-000000001.tsm  000000002-000000002.tsm  fields.idx
Data/influxdb/data/pyexample/autogen/6/: 000000001-000000001.tsm  000000003-000000001.tsm  000000005-000000002.tsm  fields.idx  (+2 more)
Data/influxdb/meta/: meta.db
Data/mongo/: backupdatabase.sql
Data/postgre/: demo_data.sql
migrations/versions/: 0b5a37e24dc8_.py  7174679f9744_.py  b9e3d283986d_.py  cbf450f67ba1_.py  d4c02d920e23_.py  e56d480eec61_.py
olivierkesslerO1/flaskblog/: manage.py
olivierkesslerO1/flaskblog/app/: app.py  config.py
olivierkesslerO1/flaskblog/ops/: oliviersible.py
olivierkesslerO1/flaskblog/templates/: delete_article.html  home.html  update_article.html
src/: data_engine.py
src/templates/: write_article.html
static/css/: home.css
templates/: base.html  home.html
wal/_internal/monitor/1/: _00001.wal
(+8 files in other folders)
